--- a/.config/sway/config
+++ b/.config/sway/config
@@ -15,9 +15,12 @@ set $up k
 set $right l
 # Your preferred terminal emulator
 set $term alacritty
+#files manager
+set $file nemo
 # Your preferred application launcher
 set $menu rofi -show run
 default_border none
+#gaps windows
 gaps inner 10
 include /etc/sway/config-vars.d/*
 
@@ -78,7 +81,7 @@ output * bg ~/wallpaper/sui.jpg fill
 
     # Start your launcher
     bindsym $mod+d exec $menu
-
+    bindsym $mod+e exec $file
     # Drag floating windows by holding down $mod and left mouse button.
     # Resize them with right mouse button + $mod.
     # Despite the name, also works for non-floating windows.
@@ -88,7 +91,8 @@ output * bg ~/wallpaper/sui.jpg fill
 
     # Reload the configuration file
     bindsym $mod+Shift+c reload
-
+    #Screenshot
+    bindsym $mod+Shift+s exec --no-startup-id slurp | grim -g - $(xdg-user-dir PICTURES)/Screenshots/$(date +'screenshot_%Y-%m-%d-%H%M%S.png')
     # Exit sway (logs you out of your Wayland session)
     bindsym $mod+Shift+e exec swaynag -t warning -m 'You pressed the exit shortcut. Do you really want to exit sway? This will end your Wayland session.' -B 'Yes, exit sway' 'swaymsg exit'
 #
@@ -154,7 +158,7 @@ output * bg ~/wallpaper/sui.jpg fill
     # Switch the current container between different layout styles
     bindsym $mod+s layout stacking
     bindsym $mod+w layout tabbed
-    bindsym $mod+e layout toggle split
+    bindsym $mod+t layout toggle split
 
     # Make the current focus fullscreen
     bindsym $mod+f fullscreen
@@ -163,7 +167,7 @@ output * bg ~/wallpaper/sui.jpg fill
     bindsym $mod+Shift+space floating toggle
 
     # Swap focus between the tiling area and the floating area
-    bindsym $mod+space focus mode_toggle
+    #bindsym $mod+space focus mode_toggle
 
     # Move focus to the parent container
     bindsym $mod+a focus parent
